data/derived/comb/progs/unify/prog4924.ml.out
Characters 195-196:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a -> (int * int) list -> int * 'a
       but an expression was expected of type 'a -> (int * int) list -> 'a
       The type variable 'a occurs inside int * 'a
